--- a/portfolio/src/app/drawer/drawer.component.html
+++ b/portfolio/src/app/drawer/drawer.component.html
@@ -13,6 +13,8 @@
     <div class="container">
       <app-cover class="cover"></app-cover>
       <app-main-content class="content"></app-main-content>
+      <app-about id="about-content"></app-about>
+      <app-portfolio id="portfolio-content"></app-portfolio>
       <app-contact id="contact-content"></app-contact>
       <app-footer></app-footer>
     </div>
