--- a/portfolio/src/app/about/about.component.css
+++ b/portfolio/src/app/about/about.component.css
@@ -54,16 +54,20 @@
   font-size: 18px;
   font-family: Nova, monospace;
 }
+.container .staff-skills {
+  margin-top: 50px;
+}
 .container .staff-skills .skill-header {
   font-size: 24px;
   font-family: "Righteous", cursive;
   color: var(--color-accent);
-  text-align: left;
 }
 .container .staff-skills .skills ul {
+  width: 100%;
   text-align: left;
 }
 .container .staff-skills .skills li {
+  font-size: 16px;
   color: white;
   font-family: Nova, monospace;
 }
