--- a/portfolio/src/app/hero/hero.component.scss
+++ b/portfolio/src/app/hero/hero.component.scss
@@ -1,11 +1,13 @@
 .intro-container{
   display: flex;
-  margin-top: 100px;
-  margin-left: 75px;
+  padding: 10px;
+  margin-left: 0px;
 
-  @media only screen and (max-width: 900px) {
-    padding: 10px;
-    margin-left: 0px;
+
+  @media only screen and (min-width: 901px) {
+    margin-top: 100px;
+    margin-left: 75px;
+    padding: 0px;
   }
 
   .greeting {
