--- a/portfolio/src/app/portfolio/portfolio.component.html
+++ b/portfolio/src/app/portfolio/portfolio.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-  <div class="header" fxLayout="row" fxLayout.lt-sm="column" fxLayoutAlign.lt-sm="center center">
-    <h1 fxFlex="30%" fxFlex.sm="40%" fxFlex.lt-sm="100%" class="header-label">What have we done?</h1>
-    <mat-divider fxFlex="60%" fxFlex.lt-lg="50%" fxFlex.lt-sm="100%"></mat-divider>
+  <div class="header" fxLayout="column" fxLayout.gt-xs="row" fxLayoutAlign="center center" fxLayoutAlign.gt-xs="start start">
+    <h1 fxFlex="100%" fxFlex.gt-xs="40%" fxFlex.gt-sm="45%" fxFlex.gt-md="22%" class="header-label">What have we done?</h1>
+    <mat-divider fxFlex="100%" fxFlex.gt-xs="50%" fxFlex.gt-sm="40%" fxFlex.gt-md="60%"></mat-divider>
   </div>
   <div class="project-container">
     <div fxLayout="row wrap" fxLayout.lt-sm="column wrap" fxLayoutAlign="center center" class="project-list" >
