--- a/portfolio/src/app/about/about.component.css
+++ b/portfolio/src/app/about/about.component.css
@@ -1,11 +1,18 @@
 .container {
-  margin-top: 200px;
-  margin-left: 75px;
+  padding: 10px;
+  margin-left: 0px;
 }
-@media only screen and (max-width: 900px) {
+@media only screen and (min-width: 901px) {
   .container {
-    padding: 10px;
-    margin-left: 0px;
+    margin-top: 200px;
+    margin-left: 150px;
+  }
+}
+@media only screen and (min-width: 600px) and (max-width: 900px) {
+  .container {
+    margin-top: 75px;
+    margin-left: 50px;
+    margin-right: 50px;
   }
 }
 .container .header .header-label {
