--- a/portfolio/src/app/about/about.component.scss
+++ b/portfolio/src/app/about/about.component.scss
@@ -1,13 +1,17 @@
 
 .container {
-  margin-top: 200px;
-  margin-left: 75px;
+  padding: 10px;
+  margin-left: 0px;
 
+  @media only screen and (min-width: 901px) {
+    margin-top: 200px;
+    margin-left: 150px;
+  }
 
-
-  @media only screen and (max-width: 900px) {
-    padding: 10px;
-    margin-left: 0px;
+  @media only screen and (min-width: 600px) and (max-width: 900px) {
+    margin-top: 75px;
+    margin-left: 50px;
+    margin-right: 50px;
   }
 
   .header {
