--- a/portfolio/src/app/hero/hero.component.css
+++ b/portfolio/src/app/hero/hero.component.css
@@ -1,12 +1,13 @@
 .intro-container {
   display: flex;
-  margin-top: 100px;
-  margin-left: 75px;
+  padding: 10px;
+  margin-left: 0px;
 }
-@media only screen and (max-width: 900px) {
+@media only screen and (min-width: 901px) {
   .intro-container {
-    padding: 10px;
-    margin-left: 0px;
+    margin-top: 100px;
+    margin-left: 75px;
+    padding: 0px;
   }
 }
 .intro-container .greeting {
