--- a/portfolio/src/app/portfolio/portfolio.component.scss
+++ b/portfolio/src/app/portfolio/portfolio.component.scss
@@ -1,14 +1,18 @@
 @import '../../../node_modules/@angular/material/_theming.scss';
 
 .container {
-  margin-top: 100px;
-  padding: 0px;
+  padding: 10px;
   margin-left: 0px;
 
-
   @media only screen and (min-width: 901px) {
-    margin-top: 210px;
-    margin-left: 75px;
+    margin-top: 200px;
+    margin-left: 150px;
+  }
+
+  @media only screen and (min-width: 600px) and (max-width: 900px){
+    margin-top: 75px;
+    margin-left: 50px;
+    margin-right: 50px;
   }
 
   .header {
@@ -21,6 +25,7 @@
         font-size: 24px;
       }
     }
+
     mat-divider {
       border-top-color: white;
       width: 50%;
@@ -40,74 +45,93 @@
 }
 
 .project-container {
-  margin-right: 75px;
+  padding: 10px;
+  margin-left: 0px;
+  margin-right: 0px;
 
-  @media only screen and (max-width: 599px) {
+
+  @media only screen and (min-width: 901px) {
     padding: 10px;
-    margin-left: 0px;
-    margin-right: 0px;
+
   }
-    .card-container {
-      padding: 10px;
-      .project-card {
-        border-radius: 10px;
-        background-color: #4F4F4F;
 
-        .card-image {
-          object-fit: cover;
-          height: 200px;
-          opacity: .5;
+  @media only screen and (min-width: 600px) and (max-width: 900px) {
+    padding: 10px;
+    margin-left: 10px;
+    margin-right: 19px;
+  }
 
-          transition: opacity 0.3s;
-          -webkit-transition: opacity 0.3s;
+  .card-container {
+    padding-left: 2px;
+    padding-right: 2px;
+    padding-top: 10px;
 
-          &:hover {
-            opacity: .7;
-          }
-        }
+    @media only screen and (min-width: 900px) {
+      padding-left: 10px;
+      padding-right: 10px;
+      padding-top: 10px;
+    }
 
-        @include mat-elevation-transition;
-        @include mat-elevation(2);
 
+    .project-card {
+      border-radius: 10px;
+      background-color: #4F4F4F;
+
+      .card-image {
+        object-fit: cover;
+        height: 200px;
+        opacity: .5;
+
+        transition: opacity 0.3s;
+        -webkit-transition: opacity 0.3s;
 
         &:hover {
-          @include mat-elevation(8);
+          opacity: .7;
         }
+      }
 
-        .project-title {
-          font-family: Righteous, cursive;
-          color: var(--color-accent);
-          font-size: 18px;
+      @include mat-elevation-transition;
+      @include mat-elevation(2);
 
-          .icon {
-            color: white;
-            margin-left: 3px;
-          }
 
-          .name {
-            margin-left: 10px;
-          }
-        }
+      &:hover {
+        @include mat-elevation(8);
+      }
 
-        .project-subtitle {
-          margin-top: 5px;
+      .project-title {
+        font-family: Righteous, cursive;
+        color: var(--color-accent);
+        font-size: 18px;
+
+        .icon {
+          color: white;
           margin-left: 3px;
+        }
+
+        .name {
+          margin-left: 10px;
+        }
+      }
+
+      .project-subtitle {
+        margin-top: 5px;
+        margin-left: 3px;
+        font-family: Nova, monospace;
+
+      }
+
+      .project-content {
+        padding-top: 20px;
+
+        .project-description {
           font-family: Nova, monospace;
 
-        }
-
-        .project-content {
-          padding-top: 20px;
-
-          .project-description {
-            font-family: Nova, monospace;
-
-            @media only screen and (max-width: 959px) {
-              font-size: 14px;
-            }
-
+          @media only screen and (max-width: 959px) {
+            font-size: 14px;
           }
+
         }
       }
     }
   }
+}
