--- a/portfolio/src/app/toolbar/toolbar.component.css
+++ b/portfolio/src/app/toolbar/toolbar.component.css
@@ -4,9 +4,18 @@
   flex: 1 1 auto;
 }
 
-.branding {
-  height: 55px;
-  width: 100%;
+.branding-container {
+  height: calc(100% - 5px);
+}
+.branding-container .toolbar-logo {
+  height: 100%;
+  max-width: 100%;
+}
+.branding-container .toolbar-text-logo {
+  height: 100%;
+  max-width: 100%;
+  margin-left: 5px;
+  margin-bottom: 2px;
 }
 
 /*# sourceMappingURL=toolbar.component.css.map */
