--- a/portfolio/src/app/cover/cover.component.css
+++ b/portfolio/src/app/cover/cover.component.css
@@ -2,6 +2,11 @@
   margin-top: 4px;
   height: 400px;
   width: 100%;
+  opacity: 0;
+  animation-fill-mode: forwards;
+  animation-name: fadeIn;
+  animation-duration: 1s;
+  animation-delay: 500ms;
 }
 @media screen and (max-width: 600px) {
   .header-image {
@@ -34,6 +39,15 @@
   left: 0px;
   top: 0px;
   z-index: -1;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /*# sourceMappingURL=cover.component.css.map */
