--- a/portfolio/src/app/hero/hero.component.css
+++ b/portfolio/src/app/hero/hero.component.css
@@ -11,29 +11,59 @@
   }
 }
 .intro-container .greeting {
+  -webkit-animation: fadeIn 500ms 1s forwards;
+  /* Safari 4+ */
+  -moz-animation: fadeIn 500ms 1s forwards;
+  /* Fx 5+ */
+  -o-animation: fadeIn 500ms 1s forwards;
+  /* Opera 12+ */
+  animation: fadeIn 500ms 1s forwards;
+  opacity: 0;
   color: var(--color-accent);
   font-size: 48px;
   font-family: "Righteous", cursive;
 }
-.intro-container .adjusted, .intro-container .intro, .intro-container .specialities, .intro-container .description {
+.intro-container .base, .intro-container .specialities, .intro-container .description, .intro-container .intro {
   margin-left: 3px;
-}
-.intro-container .intro, .intro-container .specialities, .intro-container .description {
   color: white;
   font-size: 24px;
   font-family: Nova, monospace;
+  opacity: 0;
+}
+.intro-container .intro {
+  -webkit-animation: fadeIn 500ms 1.5s forwards;
+  /* Safari 4+ */
+  -moz-animation: fadeIn 500ms 1.5s forwards;
+  /* Fx 5+ */
+  -o-animation: fadeIn 500ms 1.5s forwards;
+  /* Opera 12+ */
+  animation: fadeIn 500ms 1.5s forwards;
 }
 .intro-container .description {
   margin-top: 35px;
   font-size: 18px;
   color: lightgray;
   max-width: 35em;
+  -webkit-animation: fadeIn 500ms 2s forwards;
+  /* Safari 4+ */
+  -moz-animation: fadeIn 500ms 2s forwards;
+  /* Fx 5+ */
+  -o-animation: fadeIn 500ms 2s forwards;
+  /* Opera 12+ */
+  animation: fadeIn 500ms 2s forwards;
 }
 .intro-container .specialities {
   margin-top: 15px;
   font-size: 18px;
   color: lightgray;
   max-width: 35em;
+  -webkit-animation: fadeIn 500ms 2.5s forwards;
+  /* Safari 4+ */
+  -moz-animation: fadeIn 500ms 2.5s forwards;
+  /* Fx 5+ */
+  -o-animation: fadeIn 500ms 2.5s forwards;
+  /* Opera 12+ */
+  animation: fadeIn 500ms 2.5s forwards;
 }
 .intro-container .cta-button {
   margin-top: 25px;
@@ -41,6 +71,25 @@
   border-width: thin;
   border-color: var(--color-accent);
   outline-color: var(--color-accent);
+  opacity: 0;
+  -webkit-animation: fadeIn 500ms 3s forwards;
+  /* Safari 4+ */
+  -moz-animation: fadeIn 500ms 3s forwards;
+  /* Fx 5+ */
+  -o-animation: fadeIn 500ms 3s forwards;
+  /* Opera 12+ */
+  animation: fadeIn 500ms 3s forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    transform: translate(10px);
+    opacity: 0;
+  }
+  to {
+    transform: translate(0px);
+    opacity: 1;
+  }
 }
 
 /*# sourceMappingURL=hero.component.css.map */
