--- a/portfolio/src/app/navigation-buttons/navigation-buttons.component.css
+++ b/portfolio/src/app/navigation-buttons/navigation-buttons.component.css
@@ -1,3 +1,47 @@
+.fade-in-animation {
+  opacity: 0;
+  -webkit-animation: fadeIn 300ms 250ms forwards;
+  /* Safari 4+ */
+  -moz-animation: fadeIn 300ms 250ms forwards;
+  /* Fx 5+ */
+  -o-animation: fadeIn 300ms 250ms forwards;
+  /* Opera 12+ */
+  animation: fadeIn 300ms 250ms forwards;
+}
+
+.toolbar-button:nth-child(1) {
+  opacity: 0;
+  -webkit-animation: fadeIn 300ms 250ms forwards;
+  /* Safari 4+ */
+  -moz-animation: fadeIn 300ms 250ms forwards;
+  /* Fx 5+ */
+  -o-animation: fadeIn 300ms 250ms forwards;
+  /* Opera 12+ */
+  animation: fadeIn 300ms 250ms forwards;
+}
+
+.toolbar-button:nth-child(2) {
+  opacity: 0;
+  -webkit-animation: fadeIn 300ms 500ms forwards;
+  /* Safari 4+ */
+  -moz-animation: fadeIn 300ms 500ms forwards;
+  /* Fx 5+ */
+  -o-animation: fadeIn 300ms 500ms forwards;
+  /* Opera 12+ */
+  animation: fadeIn 300ms 500ms forwards;
+}
+
+.toolbar-button:nth-child(3) {
+  opacity: 0;
+  -webkit-animation: fadeIn 300ms 750ms forwards;
+  /* Safari 4+ */
+  -moz-animation: fadeIn 300ms 750ms forwards;
+  /* Fx 5+ */
+  -o-animation: fadeIn 300ms 750ms forwards;
+  /* Opera 12+ */
+  animation: fadeIn 300ms 750ms forwards;
+}
+
 .toolbar-button {
   margin-left: 6px;
 }
@@ -14,6 +58,15 @@
 @media only screen and (max-width: 959px) {
   .button-container {
     flex-flow: column nowrap;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
 
