--- a/portfolio/src/app/toolbar/toolbar.component.css
+++ b/portfolio/src/app/toolbar/toolbar.component.css
@@ -4,18 +4,37 @@
   flex: 1 1 auto;
 }
 
+.fade-in-animation, .branding-container .toolbar-text-logo, .branding-container .toolbar-logo, .toolbar-button {
+  opacity: 0;
+  -webkit-animation: fadeIn 300ms 250ms forwards;
+  /* Safari 4+ */
+  -moz-animation: fadeIn 300ms 250ms forwards;
+  /* Fx 5+ */
+  -o-animation: fadeIn 300ms 250ms forwards;
+  /* Opera 12+ */
+  animation: fadeIn 300ms 250ms forwards;
+}
+
 .branding-container {
   height: calc(100% - 5px);
 }
-.branding-container .toolbar-logo {
-  height: 100%;
+.branding-container .base-toolbar-logo, .branding-container .toolbar-text-logo, .branding-container .toolbar-logo {
+  margin-top: 1px;
+  height: calc(100% - 3px);
   max-width: 100%;
 }
 .branding-container .toolbar-text-logo {
-  height: 100%;
-  max-width: 100%;
   margin-left: 5px;
   margin-bottom: 2px;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /*# sourceMappingURL=toolbar.component.css.map */
