--- a/portfolio/src/app/toolbar/toolbar.component.html
+++ b/portfolio/src/app/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar fxLayout="row" fxLayoutAlign="start center" [@toggle]="isVisible" class="md-tall mat-elevation-z4"
              color="primary">
   <mat-toolbar-row>
-    <button fxShow="true" fxHide.gt-sm="true" (click)="openSideNav()" color="accent" mat-icon-button>
+    <button class="toolbar-button" fxShow="true" fxHide.gt-sm="true" (click)="openSideNav()" color="accent" mat-icon-button>
       <mat-icon svgIcon="menu"></mat-icon>
     </button>
     <div fxFlex="grow" class="branding-container" fxLayout="row">
