--- a/portfolio/src/app/toolbar/toolbar.component.scss
+++ b/portfolio/src/app/toolbar/toolbar.component.scss
@@ -4,18 +4,47 @@
     flex: 1 1 auto;
 }
 
+.fade-in-animation {
+  opacity: 0;
+  -webkit-animation: fadeIn 300ms 250ms forwards; /* Safari 4+ */
+  -moz-animation: fadeIn 300ms 250ms forwards; /* Fx 5+ */
+  -o-animation: fadeIn 300ms 250ms forwards; /* Opera 12+ */
+  animation: fadeIn 300ms 250ms forwards;
+}
+
+.toolbar-button {
+  @extend .fade-in-animation;
+}
+
 .branding-container {
   height: calc(100% - 5px);
 
-  .toolbar-logo {
-    height: 100%;
+  .base-toolbar-logo {
+    margin-top: 1px;
+    height: calc(100% - 3px);
     max-width: 100%;
   }
+
+  .toolbar-logo {
+    @extend .fade-in-animation;
+    @extend .base-toolbar-logo;
+  }
   .toolbar-text-logo {
-    height: 100%;
-    max-width: 100%;
+    @extend .fade-in-animation;
+    @extend .base-toolbar-logo;
+
     margin-left: 5px;
     margin-bottom: 2px;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
   }
 }
 
