--- a/portfolio/src/app/contact/contact.component.html
+++ b/portfolio/src/app/contact/contact.component.html
@@ -1,10 +1,10 @@
 <div class="container">
-  <div fxFlex="100%" fxLayout="column" fxLayoutAlign="center center" class="contact-content">
-    <h2 class="header">Ready to get to work?</h2>
-    <p class="body">
+  <div appFadeInOnce fxFlex="100%" fxLayout="column" fxLayoutAlign="center center" class="contact-content">
+    <h2 appFadeInOnce class="header">Ready to get to work?</h2>
+    <p appFadeInOnce class="body">
       We are more than excited to get to work helping you solve your problem!
       Whether you need a new website for your company, help branding your company, or both we are ready to help.
     </p>
-    <button mat-raised-button color="accent" (click)="contactUs()"><i class="fas fa-pencil-alt"></i> Get In Touch</button>
+    <button appFadeInOnce mat-raised-button color="accent" (click)="contactUs()"><i class="fas fa-pencil-alt"></i> Get In Touch</button>
   </div>
 </div>
