--- a/portfolio/src/app/about/about.component.css
+++ b/portfolio/src/app/about/about.component.css
@@ -15,6 +15,9 @@
     margin-right: 50px;
   }
 }
+.container .header {
+  opacity: 0;
+}
 .container .header .header-label {
   color: var(--color-accent);
   font-size: 36px;
@@ -47,7 +50,11 @@
 .container .middle-profile {
   margin-top: 100px;
 }
+.container .about {
+  opacity: 0;
+}
 .container .about .headshot-container .headshot {
+  opacity: 0;
   border-radius: 8px;
   mask-image: linear-gradient(var(--color-accent), transparent);
   max-height: 450px;
@@ -57,11 +64,13 @@
   margin-left: 3px;
 }
 .container .about .description {
+  opacity: 0;
   color: lightgray;
   font-size: 18px;
   font-family: Nova, monospace;
 }
 .container .staff-skills {
+  opacity: 0;
   margin-top: 50px;
 }
 .container .staff-skills .skill-header {
