--- a/portfolio/src/app/contact/contact.component.scss
+++ b/portfolio/src/app/contact/contact.component.scss
@@ -2,6 +2,7 @@
   margin-top: 100px;
   .contact-content {
     .header {
+      opacity:0;
       font-size: 36px;
       font-family: Righteous, cursive;
       color: var(--color-accent);
@@ -11,6 +12,7 @@
       }
     }
     .body {
+      opacity:0;
       font-size: 18px;
       font-family: Nova, monospace;
       color: lightgray;
@@ -23,6 +25,7 @@
     }
 
     button {
+      opacity:0;
       margin-top: 25px;
     }
   }
