--- a/portfolio/src/app/portfolio/portfolio.component.css
+++ b/portfolio/src/app/portfolio/portfolio.component.css
@@ -6,6 +6,7 @@
 }
 .container .header {
   margin-left: 0px;
+  opacity: 0;
 }
 @media only screen and (min-width: 901px) {
   .container .header {
@@ -77,6 +78,7 @@
   }
 }
 .project-container .card-container .project-card {
+  opacity: 0;
   border-radius: 10px;
   background-color: #4F4F4F;
   transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
