--- a/portfolio/src/app/portfolio/portfolio.component.scss
+++ b/portfolio/src/app/portfolio/portfolio.component.scss
@@ -5,6 +5,7 @@
 
   .header {
     margin-left: 0px;
+    opacity: 0;
 
     @media only screen and (min-width: 901px) {
       margin-top: 200px;
@@ -74,6 +75,7 @@
 
 
     .project-card {
+      opacity: 0;
       border-radius: 10px;
       background-color: #4F4F4F;
 
