--- a/portfolio/src/app/contact/contact.component.html
+++ b/portfolio/src/app/contact/contact.component.html
@@ -2,9 +2,10 @@
   <div appFadeInOnce fxFlex="100%" fxLayout="column" fxLayoutAlign="center center" class="contact-content">
     <h2 appFadeInOnce class="header">Ready to get to work?</h2>
     <p appFadeInOnce class="body">
-      We are more than excited to get to work helping you solve your problem!
-      Whether you need a new website for your company, help branding your company, or both we are ready to help.
+      Let's do this.
+      Whether you want a new website for your awesome new company, need a little help finding your brand's sexy voice,
+      or simply want Google to finally understand your *real* office hours, we got your back.
     </p>
-    <button appFadeInOnce mat-raised-button color="accent" (click)="contactUs()"><i class="fas fa-pencil-alt"></i> Get In Touch</button>
+    <button appFadeInOnce mat-raised-button color="accent" (click)="contactUs()"><i class="fas fa-pencil-alt"></i> Holla at us</button>
   </div>
 </div>
