--- a/portfolio/src/app/hero/hero.component.css
+++ b/portfolio/src/app/hero/hero.component.css
@@ -2,6 +2,7 @@
   display: flex;
   padding: 10px;
   margin-left: 0px;
+  margin-top: 75px;
 }
 @media only screen and (min-width: 901px) {
   .intro-container {
