--- a/portfolio/src/app/hero/hero.component.scss
+++ b/portfolio/src/app/hero/hero.component.scss
@@ -3,6 +3,8 @@
   padding: 10px;
   margin-left: 0px;
 
+  margin-top: 75px;
+
 
   @media only screen and (min-width: 901px) {
     margin-top: 100px;
