Fixed cms stuff

--- a/portfolio/src/app/portfolio/portfolio.component.html
+++ b/portfolio/src/app/portfolio/portfolio.component.html
@@ -18,7 +18,7 @@
 
           </mat-card-title>
           <mat-card-subtitle class="project-subtitle">
-            {{project.company}}
+            {{project.client}}
           </mat-card-subtitle>
           <mat-card-content class="project-content">
             <p class="project-description"> {{project.description}}</p>
