--- a/portfolio/src/app/contact/contact.component.html
+++ b/portfolio/src/app/contact/contact.component.html
@@ -1,11 +1,9 @@
 <div class="container">
   <div appFadeInOnce fxFlex="100%" fxLayout="column" fxLayoutAlign="center center" class="contact-content">
-    <h2 appFadeInOnce class="header">Ready to get to work?</h2>
+    <h2 appFadeInOnce class="header">{{contact.title}}</h2>
     <p appFadeInOnce class="body">
-      Let's do this.
-      Whether you want a new website for your awesome new company, need a little help finding your brand's sexy voice,
-      or simply want Google to finally understand your *real* office hours, we got your back.
+     {{contact.body}}
     </p>
-    <button appFadeInOnce mat-raised-button color="accent" (click)="contactUs()"><i class="fas fa-pencil-alt"></i> Holla at us</button>
+    <button appFadeInOnce mat-raised-button color="accent" (click)="contactUs()"><i class="fas fa-pencil-alt"></i> {{contact.buttonLabel}}</button>
   </div>
 </div>
