--- a/portfolio/src/app/portfolio/portfolio.component.html
+++ b/portfolio/src/app/portfolio/portfolio.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div appFadeInOnce class="header" fxLayout="column" fxLayout.gt-xs="row" fxLayoutAlign="center center" fxLayoutAlign.gt-xs="start start">
-    <h1 fxFlex="100%" fxFlex.gt-xs="40%" fxFlex.gt-sm="45%" fxFlex.gt-md="30%" class="header-label">What have we done?</h1>
+    <h1 fxFlex="100%" fxFlex.gt-xs="40%" fxFlex.gt-sm="45%" fxFlex.gt-md="30%" class="header-label">What we've done?</h1>
     <mat-divider fxFlex="100%" fxFlex.gt-xs="50%" fxFlex.gt-sm="40%" fxFlex.gt-md="50%"></mat-divider>
   </div>
   <div class="project-container">
